comments too long bug fix.

--- a/PostAround-Site/css/screenNew.css
+++ b/PostAround-Site/css/screenNew.css
@@ -389,7 +389,7 @@ h1 span
 .Bottom .CommentsArea .SingleComment .CommentWrapper #commentUserName a { font-family:Tahoma, Arial; color:#6AA1BB; font-size:12px; font-weight:bold; } 
 .Bottom .CommentsArea .SingleComment .CommentWrapper #commentUserName .CommentText a {  font-weight:normal } 
 
-.Bottom .CommentsArea .SingleComment .CommentWrapper .CommentText { line-height:16px; font-family:Tahoma, Arial; text-align:left; color:#424E55; font-size:12px; }
+.Bottom .CommentsArea .SingleComment .CommentWrapper .CommentText { word-break:break-word; line-height:16px; font-family:Tahoma, Arial; text-align:left; color:#424E55; font-size:12px; }
 .Bottom .CommentsArea .SingleComment .CommentWrapper .CommentDate { clear:both; color:#A3A3A3; font-size:11px; margin-left:5px; float:left; }
 .Bottom .CommentsArea .SingleComment .CommentWrapper .PosterOnly { color:#A3A3A3; font-size:11px; margin-left:5px; float:left; }
 
